--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Contain Yourself</title>
+
+      <link rel="stylesheet" href="styles.css">
+   
   </head>
+
   <body>
     <header class="header">
       <img class="header__img" src="./images/containers.jpg" alt="Containers" />
     </header>
-    <main>
+
+
+    <main class="container">
       <h2>Containers Everywhere</h2>
       <p>
         Have you ever asked yourself how does the coffee or tea that you are
@@ -42,12 +48,9 @@
           purchase of new vessels to increase container transportation.
         </li>
       </ul>
-      <cite
-        ><a
-          href="https://www.ocean-insights.com/article/8-little-unknown-facts-about-shipping-containers/"
-          >Ocean Insights</a
-        ></cite
-      >
+      <cite>
+        <a href="https://www.ocean-insights.com/article/8-little-unknown-facts-about-shipping-containers/">Ocean Insights</a>
+      </cite>
     </main>
   </body>
 </html>
